; ModuleID = '/home/carl/AnghaBench/RetroArch/griffin/extr_..gfxvideo_crt_switch.c_crt_video_restore.c'
source_filename = "/home/carl/AnghaBench/RetroArch/griffin/extr_..gfxvideo_crt_switch.c_crt_video_restore.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@first_run = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @crt_video_restore() #0 {
  %1 = load i32, i32* @first_run, align 4
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %3, label %4

3:                                                ; preds = %0
  br label %5

4:                                                ; preds = %0
  store i32 1, i32* @first_run, align 4
  br label %5

5:                                                ; preds = %4, %3
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
